# dmdlint

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  dub.json  dub.selections.json  meson.build  meson_options.txt
.github/workflows/: build.yml  checks.yml
compiler/: meson.build
source/dmdlint/: app.d  opt.d
source/dmdlint/common/: diag.d  rules.d  scanopt.d  utils.d
source/dmdlint/linter/: app.d
source/dmdlint/scanner/: app.d  compiler.d  diag.d  utils.d
source/dmdlint/scanner/rules/: unused.d  useless.d
